# libwebshare

./: AUTHORS  Doxyfile  Makefile  Makefile.am  Makefile.in  NOTES  NOTES~  configure  configure.in  cscope.out  libtool  libwebdevelop.kdevses  libwebdevelop.kdevses~  libwebshare.kdevelop  libwebshare.kdevelop~  libwebshare.kdevses
autom4te.cache/: output.0  output.2  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
examples/: Makefile  Makefile.in  serve_buffer.c
include/: callback_table.h  mime.h  trie.h  types.h  webshare.h  webshare.h~  wsdate.h  wsinet.h  wsipc.h  wspagetable.h
src/: Makefile  Makefile.am  Makefile.in  callback_table.c  client_thread.c  client_thread.h  config.h  cpt.h  cscope.out  default_pages.h  hash.c~  hash.h  hashtable.h  http.c  http.h  mime.c~  mime.h~  mime_types.c~  mime_types_old.c~  mimetest  pagetable.c  pagetable.h  server.h  spare.c  thttpd.c  trie.c  trie.c~  trie.h~  util.c  util.h  version.h  webshare.c  webshare.h  webshare_headers.h  webshare_types.h  wsdate.c  wserror.c  wserror.c~  wserror.h~  wsfs.h  (+16 more)
src/examples/: Makefile.am
src/examples/.deps/: simple1.Po
src/examples/serve_buffer/: Makefile.am~  Makefile.in  cscope.out  serve_buffer.c~
src/examples/serve_file/: Makefile.am  Makefile.in  serve_file.c
src/www/: index.html
src/www/style/: bg_green.css  green.css  minimalist.css
templates/: c  h
trash/: cpt.c  cscope.out  default_pages.c  hash.c  mime.c  mime_types.c  mime_types_old.c  portable_types.c  portable_types.h  reply_codes.h  (+12 more)
(+3 files in other folders)
