AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libwebshare, 0.2)

AC_LANG(C)
AC_PROG_CC
AC_PROG_CC_STDC


#AM_PATH_GLIB_2_0(1.2.10,,AC_MSG_ERROR(glib not found or too old),gmodule gthread)
#GLIB_CFLAGS="`pkg-config --cflags glib-2.0 gmodule-2.0 gthread-2.0`"
#GLIB_LIBS="`pkg-config --libs glib-2.0 gmodule-2.0 gthread-2.0`"

AC_PROG_RANLIB

# add check for libcurl


AC_OUTPUT(Makefile \
		   src/Makefile \
		   src/examples/Makefile \
		   src/examples/serve_buffer/Makefile \
		   src/examples/serve_file/Makefile)
